--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "socket.io"                    : "1.4.8",
     "socket.io-client"             : "1.4.8",
     "acorn"                        : "3.2.0",
-    "marked"                       : "0.3.5",
+    "remarkable"                   : "1.6.2",
     "highlight.js"                 : "9.4.0",
     "uglify-js"                    : "2.6.4",
     "mime"                         : "1.3.4",
